# XaerotoJourneyMap

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: cmake-multi-platform.yml
resources/: CMakeLists.txt  build.sh  main.cpp
src/: byteParser.cpp  colorConverter.cpp  converter.cpp  converter.h  main.cpp
src/lookup/: stateToColor.h
